
  * Remove trailing whitespace and inconsistent use of newlines.
  * Update metadata headers needed for ELPA packages (Closes: #911062).
    - Add Commentary and Code sections to debian-copyright.el.
    - Add Commentary section to readme-debian.el.
    - Fix Commentary section in dpkg-dev-el.el.
    - Add Copyright, Author, and Created headers to dpkg-dev-el.el.
  * debian/copyright:
    - Add entry for dpkg-dev-el.el.
    - Use secure copyright-format URL.
  * dpkg-dev-el.el: Change description to name dpkg-dev-el rather than
    debian-el, which is now anachronistic.

 -- Nicholas D Steeves <nsteeves@gmail.com>  Sun, 21 Oct 2018 19:00:11 -0400

dpkg-dev-el (37.6) unstable; urgency=medium

  * Load dpkg-dev-el.el at startup.
  * Bug fix: "auto-mode-alist README.source regexp", thanks to Kevin Ryde
    (Closes: #672195).

 -- David Bremner <bremner@debian.org>  Fri, 19 Oct 2018 22:44:15 -0300

dpkg-dev-el (37.5) unstable; urgency=medium

  * debian-changelog-mode: (require 'faces).  Bug fix:
    "debian-changelog-warning-face not defined in Emacs 23", thanks to
    Trent W. Buck (Closes: #592195).
  * debian-changelog-mode: use defface to define
    debian-changelog-warning-face (Closes: #500642)

 -- David Bremner <bremner@debian.org>  Thu, 18 Oct 2018 21:28:20 -0300

dpkg-dev-el (37.4) unstable; urgency=medium

  * Upload to unstable (Closes: #904816). Thanks to Sven Joachim for
    noticing.

 -- David Bremner <bremner@debian.org>  Sun, 29 Jul 2018 06:12:32 +0800

dpkg-dev-el (37.3) experimental; urgency=medium

  * Fix Vcs-*

 -- David Bremner <bremner@debian.org>  Sun, 08 Jul 2018 12:21:22 -0300

dpkg-dev-el (37.2) experimental; urgency=medium

  * Bug fix: "debian-control-source-fields is outdated", thanks to Sven
    Joachim (Closes: #882775).

 -- David Bremner <bremner@debian.org>  Sun, 01 Jul 2018 07:04:31 -0300

dpkg-dev-el (37.1) experimental; urgency=medium

  * update debian/copyright for split package
